--- a/Covid_SIR_model.ipynb
+++ b/Covid_SIR_model.ipynb
@@ -42,10 +42,9 @@
     "df_plot = pd.DataFrame({\n",
     "    'date':time_idx})\n",
     "\n",
-    "country_list=['India',\n",
-    "              'Germany',\n",
-    "              'Greece',\n",
-    "              'Italy'\n",
+    "country_list=['Poland',\n",
+    "              'France',\n",
+    "              'India',\n",
     "             ] \n",
     "\n",
     "for each in country_list:\n",
@@ -3122,13 +3121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
@@ -3193,7 +3198,7 @@
     "             \n",
     "            'layout': dict (\n",
     "                width=1280,height=720,\n",
-    "                plot_bgcolor=\"#fdf9ed\",\n",
+    "                plot_bgcolor=\"#FDEEEB\",\n",
     "                xaxis={'title':'Timeline','tickangle':-45,'nticks':20,\n",
     "                'tickfont':dict(size=14,color=\"#0c6887\"),},yaxis=my_yaxis)}\n",
     "\n",
